[package]
name = "responses-api-store-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Protobuf definitions for the Responses API store gRPC service"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }